fix compile error. The project uses only resources from Java 8 or minor